Fix profile pictures being stretched. Resolves #42.

--- a/resources/assets/sass/_layouts.sass
+++ b/resources/assets/sass/_layouts.sass
@@ -218,3 +218,6 @@ body
 
         &.open
             right: 0px
+
+.profile-picture
+    object-fit: cover
